# Python_Desktop_APP_Framework

./: .gitignore  QT_designer_tutorial.md  README.md  pyproject.toml
data/: airline.csv  airline.json  airline.parquet
qt_ui/: constance01.ui  main_window.ui
src/: DataReader.py  L02_horizontal_layout.py  L03_vertical_layout.py  L04_grid_layout.py  L07_main_window.py
src/Lessons/: L01_hello_world.py  L05_form_layout.py  L06_dialog.ipynb  L06_dialog.py  L08_01_signal_slot.py  L08_Signals_slots.ipynb  L09_model_view_control.ipynb  L09_model_view_framework.ipynb  L10_Popup_window.py  L11_Threading.ipynb
src/Lessons/src/: 01.SimpleButton.py  02.SimpleButtonMVC.py  04.signal_slot_improved.py  S01.SimpleButtonMVC.py
src/Lessons/various_components/: 01.QTabWidget.ipynb  02.TabWidget.ipynb  03.ContextMenu.ipynb  03.QTableView.ipynb  04.QDockWidget.ipynb  05.QTabWidget.ipynb  06.QToolBar.ipynb  07.QCheckBox.ipynb  08.QRadioButton.ipynb  09.QComboBox.ipynb  10.QWidget.ipynb  11.QLineEdit_QTextEdit.ipynb  12.QProgressBar.ipynb  13.QMessageBox.ipynb  14.QInputDialog.ipynb  15.QFileDialog.ipynb  16.QMainWindow.ipynb  17.QListWidget.ipynb  18.QTableWidget.ipynb  (+13 more)
src/calculator/: pycalc.py
src/constance_app/: main_ui.py
src/contack_book/: README.md  runapp.py
src/file_explorer/: file_editor.py  file_exploer.py  file_uploader.py  read_csv.py
src/recette_app/: DataReader.py  main.py  mainWindowUI.py
src/student_management/: main.py
src/todo/: data.db  todo.py
src/todo_app/: README.MD  mainWindowUI.py  todo.py
src/view_example/: main_window_ui.py  slider.py
(+17 files in other folders)
