[tool.poetry]
name = "python-desktop-app-framework"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
readme = "README.md"
packages = [{include = "python_desktop_app_framework"}]

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.1.0"
pyqt6-tools = "^6.1.0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
